@@ -78,6 +78,8 @@ has _exaplus => (
             }
         }
 
+        # Use _port instead of port so it's empty if no port is in the URI.
+        # https://github.com/sqitchers/sqitch/issues/675
         for my $spec (
             [ u => $self->username ],
             [ p => $self->password ],
