@@ -46,6 +46,8 @@ has _vsql => (
         my $self = shift;
         my $uri  = $self->uri;
         my @ret  = ( $self->client );
+        # Use _port instead of port so it's empty if no port is in the URI.
+        # https://github.com/sqitchers/sqitch/issues/675
         for my $spec (
             [ username => $self->username ],
             [ dbname   => $uri->dbname    ],
