@@ -2,6 +2,10 @@ Revision history for Perl extension App::Sqitch
 
 1.3.1
 
+     - Fixed a bug introduced in v1.3.0 where the Postgres engine would
+       always pass the port to `psql`, thus ignoring the `PGPORT` environment
+       variable. Thanks to Cam Feenstra for the spot (#675)!
+
 1.3.0  2022-08-12T22:09:13Z
      - Fixed an issue when testing Firebird on a host with Firebird installed
        but no `isql`, and when using a local Firebird (e.g., the Engine12
